# ml-project-template

./: .gitignore  Dockerfile  Dockerfile_gpu  Makefile  README.md  pyproject.toml
configs/: config.yaml
docs/: 02_Gitlab.md  03_data.md  04_docker.md  05_vsc.md  data_management.md  make.md  uv.md
scripts/: .bashrc  README.md  uv-envs.sh
src/: .env.example
src/app/: train.py
src/ml_project_template.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
